Fix bug: Checkbox misaligned with label

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -493,7 +493,7 @@ p {
 }
 
 .form-group--checkboxes .form__label {
-  width: calc( 100% - 18px );
+  width: calc( 100% - 25px );
   float: right;
   margin-bottom: .5rem;
 }
